--- a/dep-test.yaml
+++ b/dep-test.yaml
@@ -2,6 +2,7 @@ name: dep-test
 channels:
   - conda-forge
 dependencies:
+  - python==3.11
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
   - alsa-lib=1.2.13=hb9d3cd8_0
@@ -263,4 +264,3 @@ dependencies:
       - torch==2.5.1+cpu
       - torchvision==0.2.0
       - vl-convert-python==1.7.0
-prefix: /home/archaoss/conda/envs/cells
