--- a/env.yaml
+++ b/env.yaml
@@ -2,30 +2,30 @@ name: dep-test
 channels:
   - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - bzip2=1.0.8=h4bc722e_7
-  - ca-certificates=2024.8.30=hbcca054_0
-  - ld_impl_linux-64=2.43=h712a8e2_2
-  - libexpat=2.6.4=h5888daf_0
-  - libffi=3.4.2=h7f98852_5
-  - libgcc=14.2.0=h77fa898_1
-  - libgcc-ng=14.2.0=h69a702a_1
-  - libgomp=14.2.0=h77fa898_1
-  - liblzma=5.6.3=hb9d3cd8_1
-  - libnsl=2.0.1=hd590300_0
-  - libsqlite=3.47.2=hee588c1_0
-  - libuuid=2.38.1=h0b41bf4_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libzlib=1.3.1=hb9d3cd8_2
-  - ncurses=6.5=he02047a_1
-  - openssl=3.4.0=hb9d3cd8_0
-  - pip=24.3.1=pyh8b19718_0
-  - python=3.11.11=h9e4cc4f_1_cpython
-  - readline=8.2=h8228510_1
-  - setuptools=75.6.0=pyhff2d567_1
-  - tk=8.6.13=noxft_h4845f30_101
-  - wheel=0.45.1=pyhd8ed1ab_1
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - bzip2=1.0.8
+  - ca-certificates=2024.8.30
+  - ld_impl_linux-64=2.43
+  - libexpat=2.6.4
+  - libffi=3.4.2
+  - libgcc=14.2.0
+  - libgcc-ng=14.2.0
+  - libgomp=14.2.0
+  - liblzma=5.6.3
+  - libnsl=2.0.1
+  - libsqlite=3.47.2
+  - libuuid=2.38.1
+  - libxcrypt=4.4.36
+  - libzlib=1.3.1
+  - ncurses=6.5
+  - openssl=3.4.0
+  - pip=24.3.1
+  - python=3.11.11
+  - readline=8.2
+  - setuptools=75.6.0
+  - tk=8.6.13
+  - wheel=0.45.1
   - pip:
       - altair==5.5.0
       - attrs==24.2.0
@@ -62,3 +62,4 @@ dependencies:
       - torchvision==0.20.1+cpu
       - typing-extensions==4.12.2
       - tzdata==2024.2
+prefix: /home/archaoss/conda/envs/dep-test
