--- a/env.yaml
+++ b/env.yaml
@@ -2,64 +2,223 @@ name: dep-test
 channels:
   - conda-forge
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - bzip2=1.0.8
-  - ca-certificates=2024.8.30
-  - ld_impl_linux-64=2.43
-  - libexpat=2.6.4
-  - libffi=3.4.2
-  - libgcc=14.2.0
-  - libgcc-ng=14.2.0
-  - libgomp=14.2.0
-  - liblzma=5.6.3
-  - libnsl=2.0.1
-  - libsqlite=3.47.2
-  - libuuid=2.38.1
-  - libxcrypt=4.4.36
-  - libzlib=1.3.1
-  - ncurses=6.5
-  - openssl=3.4.0
-  - pip=24.3.1
-  - python=3.11.11
-  - readline=8.2
-  - setuptools=75.6.0
-  - tk=8.6.13
-  - wheel=0.45.1
-  - pip:
-      - altair==5.5.0
-      - attrs==24.2.0
-      - colorama==0.4.6
-      - contourpy==1.3.1
-      - cycler==0.12.1
-      - filelock==3.13.1
-      - fonttools==4.55.3
-      - fsspec==2024.2.0
-      - jinja2==3.1.3
-      - jsonschema==4.23.0
-      - jsonschema-specifications==2024.10.1
-      - kiwisolver==1.4.7
-      - markupsafe==2.1.5
-      - matplotlib==3.9.3
-      - mpmath==1.3.0
-      - narwhals==1.17.0
-      - networkx==3.2.1
-      - numpy==1.26.3
-      - packaging==24.2
-      - pandas==2.2.3
-      - pillow==10.2.0
-      - polars==1.17.1
-      - pyarrow==18.1.0
-      - pyparsing==3.2.0
-      - python-dateutil==2.9.0.post0
-      - pytz==2024.2
-      - referencing==0.35.1
-      - rpds-py==0.22.3
-      - six==1.17.0
-      - sympy==1.13.1
-      - torch==2.5.1+cpu
-      - torchaudio==2.5.1+cpu
-      - torchvision==0.20.1+cpu
-      - typing-extensions==4.12.2
-      - tzdata==2024.2
-prefix: /home/archaoss/conda/envs/dep-test
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_kmp_llvm
+  - alsa-lib=1.2.13=hb9d3cd8_0
+  - altair=5.5.0=pyhd8ed1ab_0
+  - attrs=24.2.0=pyh71513ae_1
+  - aws-c-auth=0.8.0=h8c8080f_14
+  - aws-c-cal=0.8.1=h0f28dba_2
+  - aws-c-common=0.10.5=hb9d3cd8_0
+  - aws-c-compression=0.3.0=h9cc6398_4
+  - aws-c-event-stream=0.5.0=hf811eff_10
+  - aws-c-http=0.9.2=hce7dc5d_3
+  - aws-c-io=0.15.3=hfd54f12_3
+  - aws-c-mqtt=0.11.0=ha3c2ba9_11
+  - aws-c-s3=0.7.5=h55e9418_4
+  - aws-c-sdkutils=0.2.1=h9cc6398_3
+  - aws-checksums=0.2.2=h9cc6398_3
+  - aws-crt-cpp=0.29.7=hed26007_5
+  - aws-sdk-cpp=1.11.458=h571fd1c_3
+  - azure-core-cpp=1.14.0=h5cfcd09_0
+  - azure-identity-cpp=1.10.0=h113e628_0
+  - azure-storage-blobs-cpp=12.13.0=h3cf044e_1
+  - azure-storage-common-cpp=12.8.0=h736e048_1
+  - azure-storage-files-datalake-cpp=12.12.0=ha633028_1
+  - brotli=1.1.0=hb9d3cd8_2
+  - brotli-bin=1.1.0=hb9d3cd8_2
+  - bzip2=1.0.8=h4bc722e_7
+  - c-ares=1.34.3=hb9d3cd8_1
+  - ca-certificates=2024.8.30=hbcca054_0
+  - cairo=1.18.2=h3394656_1
+  - certifi=2024.8.30=pyhd8ed1ab_0
+  - colorama=0.4.6=pyhd8ed1ab_1
+  - contourpy=1.3.1=py311hd18a35c_0
+  - cpython=3.11.11=py311hd8ed1ab_1
+  - cycler=0.12.1=pyhd8ed1ab_1
+  - cyrus-sasl=2.1.27=h54b06d7_7
+  - dbus=1.13.6=h5008d03_3
+  - double-conversion=3.3.0=h59595ed_0
+  - expat=2.6.4=h5888daf_0
+  - filelock=3.16.1=pyhd8ed1ab_1
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_3
+  - fontconfig=2.15.0=h7e30c49_1
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.55.3=py311h2dc5d0c_0
+  - freetype=2.12.1=h267a509_2
+  - fsspec=2024.10.0=pyhd8ed1ab_1
+  - gflags=2.2.2=h5888daf_1005
+  - glog=0.7.1=hbabe93e_0
+  - gmp=6.3.0=hac33072_2
+  - gmpy2=2.1.5=py311h0f6cedb_3
+  - graphite2=1.3.13=h59595ed_1003
+  - harfbuzz=9.0.0=hda332d3_1
+  - icu=75.1=he02047a_0
+  - importlib-metadata=8.5.0=pyha770c72_1
+  - importlib_resources=6.4.5=pyhd8ed1ab_1
+  - jinja2=3.1.4=pyhd8ed1ab_1
+  - jsonschema=4.23.0=pyhd8ed1ab_1
+  - jsonschema-specifications=2024.10.1=pyhd8ed1ab_1
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.7=py311hd18a35c_0
+  - krb5=1.21.3=h659f571_0
+  - lcms2=2.16=hb7c19ff_0
+  - ld_impl_linux-64=2.43=h712a8e2_2
+  - lerc=4.0.0=h27087fc_0
+  - libabseil=20240722.0=cxx17_h5888daf_1
+  - libarrow=18.1.0=h44a453e_6_cpu
+  - libarrow-acero=18.1.0=hcb10f89_6_cpu
+  - libarrow-dataset=18.1.0=hcb10f89_6_cpu
+  - libarrow-substrait=18.1.0=h3ee7192_6_cpu
+  - libblas=3.9.0=25_linux64_openblas
+  - libbrotlicommon=1.1.0=hb9d3cd8_2
+  - libbrotlidec=1.1.0=hb9d3cd8_2
+  - libbrotlienc=1.1.0=hb9d3cd8_2
+  - libcblas=3.9.0=25_linux64_openblas
+  - libclang-cpp19.1=19.1.5=default_hb5137d0_0
+  - libclang13=19.1.5=default_h9c6a7e4_0
+  - libcrc32c=1.1.2=h9c3ff4c_0
+  - libcups=2.3.3=h4637d8d_4
+  - libcurl=8.11.1=h332b0f4_0
+  - libdeflate=1.22=hb9d3cd8_0
+  - libdrm=2.4.124=hb9d3cd8_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libegl=1.7.0=ha4b6fd6_2
+  - libev=4.33=hd590300_2
+  - libevent=2.1.12=hf998b51_1
+  - libexpat=2.6.4=h5888daf_0
+  - libffi=3.4.2=h7f98852_5
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgfortran=14.2.0=h69a702a_1
+  - libgfortran5=14.2.0=hd5240d6_1
+  - libgl=1.7.0=ha4b6fd6_2
+  - libglib=2.82.2=h2ff4ddf_0
+  - libglvnd=1.7.0=ha4b6fd6_2
+  - libglx=1.7.0=ha4b6fd6_2
+  - libgomp=14.2.0=h77fa898_1
+  - libgoogle-cloud=2.32.0=h804f50b_0
+  - libgoogle-cloud-storage=2.32.0=h0121fbd_0
+  - libgrpc=1.67.1=hc2c308b_0
+  - libhwloc=2.11.2=default_h0d58e46_1001
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
+  - liblapack=3.9.0=25_linux64_openblas
+  - libllvm19=19.1.5=ha7bfdaf_0
+  - liblzma=5.6.3=hb9d3cd8_1
+  - libnghttp2=1.64.0=h161d5f1_0
+  - libnsl=2.0.1=hd590300_0
+  - libntlm=1.4=h7f98852_1002
+  - libopenblas=0.3.28=pthreads_h94d23a6_1
+  - libopengl=1.7.0=ha4b6fd6_2
+  - libparquet=18.1.0=h081d1f1_6_cpu
+  - libpciaccess=0.18=hd590300_0
+  - libpng=1.6.44=hadc24fc_0
+  - libpq=17.2=h3b95a9b_1
+  - libprotobuf=5.28.2=h5b01275_0
+  - libre2-11=2024.07.02=hbbce691_1
+  - libsqlite=3.47.2=hee588c1_0
+  - libssh2=1.11.1=hf672d98_0
+  - libstdcxx=14.2.0=hc0a3c3a_1
+  - libstdcxx-ng=14.2.0=h4852527_1
+  - libthrift=0.21.0=h0e7cc3e_0
+  - libtiff=4.7.0=hc4654cb_2
+  - libtorch=2.5.1=cpu_mkl_h791ef64_106
+  - libutf8proc=2.9.0=hb9d3cd8_1
+  - libuuid=2.38.1=h0b41bf4_0
+  - libuv=1.49.2=hb9d3cd8_0
+  - libwebp-base=1.4.0=hd590300_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.7.0=h2c5496b_1
+  - libxml2=2.13.5=h8d12d68_1
+  - libxslt=1.1.39=h76b75d6_0
+  - libzlib=1.3.1=hb9d3cd8_2
+  - llvm-openmp=19.1.5=h024ca30_0
+  - lz4-c=1.10.0=h5888daf_1
+  - markupsafe=3.0.2=py311h2dc5d0c_1
+  - matplotlib=3.9.3=py311h38be061_0
+  - matplotlib-base=3.9.3=py311h2b939e6_0
+  - mkl=2024.2.2=ha957f24_16
+  - mpc=1.3.1=h24ddda3_1
+  - mpfr=4.2.1=h90cbb55_3
+  - mpmath=1.3.0=pyhd8ed1ab_1
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=9.0.1=h266115a_3
+  - mysql-libs=9.0.1=he0572af_3
+  - narwhals=1.16.0=pyhd8ed1ab_0
+  - ncurses=6.5=he02047a_1
+  - networkx=3.4.2=pyh267e887_2
+  - numpy=2.2.0=py311hf916aec_0
+  - openjpeg=2.5.3=h5fbd93e_0
+  - openldap=2.6.9=he970967_0
+  - openssl=3.4.0=hb9d3cd8_0
+  - orc=2.0.3=h97ab989_1
+  - packaging=24.2=pyhd8ed1ab_2
+  - pandas=2.2.3=py311h7db5c69_1
+  - pcre2=10.44=hba22ea6_2
+  - pillow=11.0.0=py311h49e9ac3_0
+  - pip=24.3.1=pyh8b19718_0
+  - pixman=0.44.2=h29eaf8c_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
+  - polars=1.17.1=py311h03f6b34_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
+  - pyarrow=18.1.0=py311h38be061_0
+  - pyarrow-core=18.1.0=py311h4854187_0_cpu
+  - pyparsing=3.2.0=pyhd8ed1ab_2
+  - pyside6=6.8.0.2=py311h9053184_0
+  - python=3.11.11=h9e4cc4f_1_cpython
+  - python-dateutil=2.9.0.post0=pyhff2d567_1
+  - python-tzdata=2024.2=pyhd8ed1ab_1
+  - python_abi=3.11=5_cp311
+  - pytorch=2.5.1=cpu_mkl_py311h29147d9_106
+  - pytz=2024.1=pyhd8ed1ab_0
+  - qhull=2020.2=h434a139_5
+  - qt6-main=6.8.0=h6e8976b_0
+  - re2=2024.07.02=h77b4e00_1
+  - readline=8.2=h8228510_1
+  - referencing=0.35.1=pyhd8ed1ab_1
+  - rpds-py=0.22.3=py311h9e33e62_0
+  - s2n=1.5.9=h0fd0ee4_0
+  - setuptools=75.6.0=pyhff2d567_1
+  - six=1.17.0=pyhd8ed1ab_0
+  - sleef=3.7=h1b44611_2
+  - snappy=1.2.1=h8bd8927_1
+  - sympy=1.13.3=pyh2585a3b_104
+  - tbb=2021.13.0=hceb3a55_1
+  - tk=8.6.13=noxft_h4845f30_101
+  - tornado=6.4.2=py311h9ecbd09_0
+  - typing-extensions=4.12.2=hd8ed1ab_1
+  - typing_extensions=4.12.2=pyha770c72_1
+  - tzdata=2024b=hc8b5060_0
+  - unicodedata2=15.1.0=py311h9ecbd09_1
+  - wayland=1.23.1=h3e06ad9_0
+  - wheel=0.45.1=pyhd8ed1ab_1
+  - xcb-util=0.4.1=hb711507_2
+  - xcb-util-cursor=0.1.5=hb9d3cd8_0
+  - xcb-util-image=0.4.0=hb711507_2
+  - xcb-util-keysyms=0.4.1=hb711507_0
+  - xcb-util-renderutil=0.3.10=hb711507_0
+  - xcb-util-wm=0.4.2=hb711507_0
+  - xkeyboard-config=2.43=hb9d3cd8_0
+  - xorg-libice=1.1.1=hb9d3cd8_1
+  - xorg-libsm=1.2.4=he73a12e_1
+  - xorg-libx11=1.8.10=h4f16b4b_1
+  - xorg-libxau=1.0.11=hb9d3cd8_1
+  - xorg-libxcomposite=0.4.6=hb9d3cd8_2
+  - xorg-libxcursor=1.2.3=hb9d3cd8_0
+  - xorg-libxdamage=1.1.6=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xorg-libxext=1.3.6=hb9d3cd8_0
+  - xorg-libxfixes=6.0.1=hb9d3cd8_0
+  - xorg-libxi=1.8.2=hb9d3cd8_0
+  - xorg-libxrandr=1.5.4=hb9d3cd8_0
+  - xorg-libxrender=0.9.11=hb9d3cd8_2
+  - xorg-libxtst=1.2.5=hb9d3cd8_3
+  - xorg-libxxf86vm=1.1.5=hb9d3cd8_4
+  - zipp=3.21.0=pyhd8ed1ab_1
+  - zstd=1.5.6=ha6fb4c9_0
